<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/blue"
    tools:context="com.my_swpu.mystudyhelper.activity.menu.ChangePasswordActivity">

    <RelativeLayout
        android:id="@+id/rlTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue">
        <LinearLayout
            android:id="@+id/ll_back_on_changepasswordactivity"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@drawable/selector_add_acount"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imgBackOnMWA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_normal"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>


        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_activity_change_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_below="@+id/rlTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.82"
        android:background="@color/background0"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edittext_change_password_oldpasswd"
            style="@style/my_edittext_style_change_password"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textColorHint="@color/gray"
            android:inputType="textPassword"
            android:hint="@string/personal_change_passwd_oldpasswd">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edittext_change_password_newpasswd1"
            style="@style/my_edittext_style_change_password"
            android:layout_below="@+id/edittext_change_password_oldpasswd"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:textColorHint="@color/gray"
            android:inputType="textPassword"
            android:hint="@string/personal_change_passwd_newpasswd1"
            android:textSize="14sp"/>


        <EditText
            android:id="@+id/edittext_change_password_newpasswd2"
            style="@style/my_edittext_style_change_password"
            android:layout_below="@+id/edittext_change_password_newpasswd1"
            android:layout_width="280dp"
            android:textColor="@color/black"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:textColorHint="@color/gray"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/personal_change_passwd_newpasswd2"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/button_change_password_submit"
            android:layout_below="@+id/edittext_change_password_newpasswd2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_login"
            android:textColor="#ffffff"
            android:text="@string/personal_change_passwd_submit" />

        <!--<TextView-->
            <!--android:id="@+id/textView1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignBottom="@+id/edittext_change_password_oldpasswd"-->
            <!--android:layout_alignLeft="@+id/edittext_change_password_oldpasswd"-->
            <!--android:layout_alignBaseline="@+id/edittext_change_password_oldpasswd"-->
            <!--android:layout_marginLeft="12dp"-->
            <!--android:textSize="16sp"-->
            <!--android:text="@string/personal_change_passwd_oldpasswd" />-->

        <!--<TextView-->
            <!--android:id="@+id/textView2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignBottom="@+id/edittext_change_password_newpasswd1"-->
            <!--android:layout_alignLeft="@+id/edittext_change_password_newpasswd1"-->
            <!--android:layout_alignBaseline="@+id/edittext_change_password_newpasswd1"-->
            <!--android:layout_marginLeft="12dp"-->
            <!--android:textSize="16sp"-->
            <!--android:text="@string/personal_change_passwd_newpasswd1" />-->

        <!--<TextView-->
            <!--android:id="@+id/textView3"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignBottom="@+id/edittext_change_password_newpasswd2"-->
            <!--android:layout_alignLeft="@+id/edittext_change_password_newpasswd2"-->
            <!--android:layout_alignBaseline="@+id/edittext_change_password_newpasswd2"-->
            <!--android:layout_marginLeft="12dp"-->
            <!--android:textSize="16sp"-->
            <!--android:text="@string/personal_change_passwd_newpasswd2" />-->

    </RelativeLayout>


</RelativeLayout>
